(lang dune 3.12)

(name parselib)

(generate_opam_files true)

(source
 (github masonh22/parselib))

(authors "Mason Hall")

(maintainers "Mason Hall")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name parselib)
 (synopsis "Parse formatted text files")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
